--- a/uiFilter.ui
+++ b/uiFilter.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>489</width>
-            <height>266</height>
+            <width>756</width>
+            <height>262</height>
         </rect>
     </property>
     <property name="caption">
@@ -59,6 +59,9 @@
     <widget class="QLineEdit">
         <property name="name">
             <cstring>leFilter</cstring>
+        </property>
+        <property name="enabled">
+            <bool>false</bool>
         </property>
         <property name="geometry">
             <rect>
@@ -166,6 +169,19 @@
         </property>
         <property name="text">
             <string></string>
+        </property>
+    </widget>
+    <widget class="QComboBox">
+        <property name="name">
+            <cstring>cbDevs</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>430</x>
+                <y>60</y>
+                <width>120</width>
+                <height>16</height>
+            </rect>
         </property>
     </widget>
 </widget>
